fix video align

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -220,7 +220,6 @@ body {
 .publication-video {
     /* position: relative; */
     display: flex;
-    align-items: center;
     justify-content: center;
 
     width: 100%;
